--- a/frontend/expenses/package.json
+++ b/frontend/expenses/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material-nextjs": "^5.16.4",
+    "@mui/x-data-grid": "^7.16.0",
     "axios": "^1.7.7",
     "next": "14.2.5",
     "react": "^18",
