add navbar and menu drawer

--- a/frontend/expenses/app-config.json
+++ b/frontend/expenses/app-config.json
@@ -1,5 +1,8 @@
 {
   "BACKEND_SERVICE_BASE_URL": "http://localhost:8080",
   "ACCOUNT_PARTIAL_URL": "/account",
-  "ACCOUNT_CREATE_PARTIAL_URL": "/create"
+  "ACCOUNT_CREATE_PARTIAL_URL": "/account/create",
+  "EXPENSE_PARTIAL_URL": "/expense",
+  "EXPENSE_CREATE_PARTIAL_URL": "/expense/create",
+  "REPORT_PARTIAL_URL": "/report"
 }
