--- a/frontend/expenses/package.json
+++ b/frontend/expenses/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material-nextjs": "^5.16.4",
-    "@mui/x-data-grid": "^7.16.0",
-    "axios": "^1.7.7",
+    "@mui/icons-material": "^5",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "axios": "^1.7.7",
     "swr": "^2.2.5"
   },
   "devDependencies": {
