--- a/frontend/expenses/package.json
+++ b/frontend/expenses/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.44.2",
+    "react-router-dom": "^6.26.2",
     "swr": "^2.2.5",
     "ts-results": "^3.3.0",
     "yup": "^1.4.0"
