backend/ feature: assign expense to account

--- a/backend/expenses/src/main/resources/application.properties
+++ b/backend/expenses/src/main/resources/application.properties
@@ -8,4 +8,4 @@ quarkus.http.cors.origins=http://localhost:3000
 //quarkus.hibernate-orm.validate-in-dev-mode=false
 //quarkus.hibernate-orm.log.sql=true
 quarkus.datasource.devservices.port=5436
-//domain.money.max-value=50000
+domain.money.max-value=50000
