--- a/backend/expenses/pom.xml
+++ b/backend/expenses/pom.xml
@@ -85,10 +85,16 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.5</version>
+        </dependency>
+        <!--<dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
         </dependency>
+        -->
 
         <!-- Testing Stuff -->
         <dependency>
