BE: basic info and error logging in endpoints, app services, exception handlers

--- a/backend/expenses/src/main/resources/application.properties
+++ b/backend/expenses/src/main/resources/application.properties
@@ -6,6 +6,6 @@ quarkus.http.cors.origins=http://localhost:3000
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.validate-in-dev-mode=false
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
 quarkus.datasource.devservices.port=5436
 domain.money.max-value=50000
