--- a/backend/expenses/src/main/resources/application.properties
+++ b/backend/expenses/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+quarkus.http.port=5001
 quarkus.log.level=INFO
 quarkus.log.category."onosoft.online".level=DEBUG
-quarkus.flyway.migrate-at-start=true
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:3000
+quarkus.flyway.migrate-at-start=true
 quarkus.datasource.db-kind=postgresql
 quarkus.hibernate-orm.database.generation=none
 quarkus.hibernate-orm.validate-in-dev-mode=false
