FE: fix missing data display after first account creation; update expense urls; factor out expenses table component; some layput changes; doc assign expense high level workflow;

--- a/frontend/expenses/app-config.json
+++ b/frontend/expenses/app-config.json
@@ -5,5 +5,7 @@
   "ACCOUNT_DETAILS_PARTIAL_URL": "/accounts/account/details",
   "EXPENSE_PARTIAL_URL": "/expenses",
   "EXPENSE_CREATE_PARTIAL_URL": "/expense/create",
+  "EXPENSE_INVOICE_PARTIAL_URL": "/expense/invoice",
+  "EXPENSE_PAID_PARTIAL_URL": "/expense/paid",
   "REPORT_PARTIAL_URL": "/report"
 }
