FE: navigate from account details page to assign expense page;

--- a/frontend/expenses/app-config.json
+++ b/frontend/expenses/app-config.json
@@ -4,7 +4,7 @@
   "ACCOUNT_CREATE_PARTIAL_URL": "/accounts/account/create",
   "ACCOUNT_DETAILS_PARTIAL_URL": "/accounts/account/details",
   "EXPENSES_PARTIAL_URL": "/expenses",
-  "EXPENSE_CREATE_PARTIAL_URL": "expenses/expense/create",
+  "EXPENSE_ASSIGN_PARTIAL_URL": "/expenses/expense/assign",
   "EXPENSE_INVOICE_PARTIAL_URL": "expenses/expense/invoice",
   "EXPENSE_PAID_PARTIAL_URL": "expenses/expense/paid",
   "REPORT_PARTIAL_URL": "/report"
