--- a/frontend/expenses/package.json
+++ b/frontend/expenses/package.json
@@ -15,7 +15,9 @@
     "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5",
     "@mui/material-nextjs": "^5.16.4",
+    "@mui/x-date-pickers": "^7.22.2",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
