--- a/frontend/expenses/package.json
+++ b/frontend/expenses/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "json-server": "json-server --watch test/mocks/db.json --port 5001",
+    "lint": "next lint",
+    "test": "jest",
+    "integration-test": "concurrently \"npm test\" \"npm run json-server\""
   },
   "dependencies": {
     "@emotion/cache": "^11.13.1",
@@ -30,14 +33,22 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "concurrently": "^9.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
