--- a/frontend/expenses/package.json
+++ b/frontend/expenses/package.json
@@ -42,11 +42,13 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "concurrently": "^9.1.0",
+    "cross-fetch": "^4.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "json-server": "^1.0.0-beta.3",
+    "msw": "^2.6.7",
     "postcss": "^8",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.1",
