+ FE: migrate to vitest/msw; implement create account integration test; add reset button; properly enable/disable reset and save buttons

--- a/frontend/expenses/package.json
+++ b/frontend/expenses/package.json
@@ -6,10 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "json-server": "json-server --watch test/mocks/db.json --port 5001",
     "lint": "next lint",
-    "test": "jest",
-    "integration-test": "concurrently \"npm test\" \"npm run json-server\""
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/cache": "^11.13.1",
@@ -37,23 +35,21 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "concurrently": "^9.1.0",
-    "cross-fetch": "^4.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "json-server": "^1.0.0-beta.3",
+    "eslint-plugin-testing-library": "^7.1.1",
+    "jsdom": "^25.0.1",
     "msw": "^2.6.7",
     "postcss": "^8",
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   }
 }
