+ FE: fix merge errors for account create/ assign expenses

--- a/frontend/expenses/tsconfig.json
+++ b/frontend/expenses/tsconfig.json
@@ -37,6 +37,9 @@
       ],
       "@/components/*": [
         "./common/components/*"
+      ],
+      "@/test/*": [
+        "./test/*"
       ]
     },
     "target": "ES2017"
