+ FE: refactoring to reuse expense details form

--- a/frontend/expenses/app-config.json
+++ b/frontend/expenses/app-config.json
@@ -27,6 +27,7 @@
     "expenses": {
       "default": "http://localhost:5001/expenses",
       "assign": "http://localhost:5001/expenses/expense/assign",
+      "update": "http://localhost:5001/expenses/expense/update",
       "delete": "http://localhost:5001/expenses/expense/delete",
       "invoice": "http://localhost:5001/expenses/expense/invoice",
       "paid": "http://localhost:5001/expenses/expense/paid"
